fixed issue where safari users were stuck on full screen button due to lack of support by safari

--- a/poolstyles.css
+++ b/poolstyles.css
@@ -186,6 +186,7 @@ button {
  margin: 0;
  color: black;
  display: flex;
+ flex-direction: column;
  justify-content: center;
  align-items: center;
 }
@@ -254,6 +255,9 @@ button {
  100% {
   opacity: 100;
  }
+}
+#fs-text {
+ color: black;
 }
 
 .hidden {
